[package]
name = "rtti-dumper"
version = "0.1.0"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs" }
simple_injector = { git = "https://github.com/etra0/simple_injector" }
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "wincon", "consoleapi", "minwindef"] }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "dumper_lib"

[[bin]]
name = "rtti_dumper"
path = "src/bin.rs"
