[package]
name = "rtti-dumper"
version = "0.1.1"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs" }
simple_injector = { git = "https://github.com/etra0/simple_injector" }
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "wincon", "consoleapi", "minwindef", "namedpipeapi", "fileapi", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "dumper_lib"

[[bin]]
name = "rtti_dumper"
path = "src/bin.rs"
